--- a/index.html
+++ b/index.html
@@ -996,6 +996,40 @@
                                     <li class="footer__support__items footer__support__items__Warranty--Policy">Chính Sách Bảo Hành</li>
                                 </a>
                             </ul>
+                            
+                            <ul class="footer__support__about-shopee">
+                                <h3 class="footer__support__heading">
+                                    VỀ SHOPEE
+                                </h3>
+                                <li class="footer__support__items footer__support__items__introduce-shopee">
+                                    Giới Thiệu Về Shopee Việt Nam
+                                </li>
+                                </li>
+                                <li class="footer__support__items footer__support__items__recuitment">
+                                    Tuyển Dụng 
+                                </li>
+                                <li class="footer__support__items footer__support__items__rules-shopee">
+                                    Điều Khoản Shopee
+                                </li>
+                                <li class="footer__support__items footer__support__items__privacy-policy">
+                                    Chính Sách Bảo Mật 
+                                </li>
+                                <li class="footer__support__items footer__support__items__real">
+                                    Chính Hãng
+                                </li>
+                                <li class="footer__support__items footer__support__items__seller-channel">
+                                    Kênh Người Bán
+                                </li>
+                                <li class="footer__support__items footer__support__items__flashs-sale">
+                                    Flashs Sale
+                                </li>
+                                <li class="footer__support__items footer__support__items__affiliate-marketing-program">
+                                    Chương Trình Tiếp Thị Liên Kết Shopee
+                                </li>
+                                <li class="footer__support__items footer__support__items__contact-media">
+                                    Liên Hệ Với Truyền Thông
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </footer>
